<resources>
    <string name="app_name">G2T Club Meals Alpha</string>
    <string name="hint_firstName">first name</string>
    <string name="hint_lastName">last name</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">User not saved because it is empty</string>
    <string name="forgot_password">forgot password?</string>
    <string name="sign_in_banner">Garden 2 Table Login</string>
    <string name="button_sign_in">Sign In</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="hint_password">  password</string>
    <string name="hint_email">e-mail</string>
    <string name="page_title">Jobs</string>
    <string name="display_date">%1$s/%2$s</string>
    <string name="swap_job">Request Swap</string>
    <string name="cancel_job">Cancel the Job</string>
    <string name="transfer_job">Request Transfer</string>
    <string name="slot_tracker_text">Monthly\nSlots Assigned</string>
    <string name="default_overview_text">Add Task</string>
    <string name="overview_slot_info">\n%1$s/%2$s\n%3$s</string>


</resources>
