<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_blank_light"
            android:theme="@style/AppTheme"

    >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="276dp"
            android:layout_height="114dp"
            android:layout_marginTop="84dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_songaia_logo_green"
            tools:srcCompat="@drawable/ic_songaia_logo_green" />


        <TextView
            android:id="@+id/sign_in_banner"
            android:layout_width="187dp"
            android:layout_height="22dp"
            android:text="@string/sign_in_banner"
            android:textColor="@color/colorGreenDark"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/email_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.771" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="318dp"
            android:layout_height="40dp"
            android:layout_marginTop="92dp"
            android:hint="@string/hint_email"
            android:textAlignment="center"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="318dp"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:background="@drawable/rounded_edittext"
            android:ellipsize="none"
            android:hint="@string/hint_password"
            android:inputType="textWebPassword"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input" />

                <Button
                    android:id="@+id/sign_in_confirm"
                    android:layout_width="318dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/sign_in_button_text"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/forgot_password"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.823"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />



        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/create_account"
            android:textColor="@color/colorGreenDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_confirm" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>