<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash_green"

    >


     <ImageView
        android:id="@+id/logo"
        android:layout_width="276dp"
        android:layout_height="114dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_songaia_logo_white"
        />

    <EditText
        android:id="@+id/first_input"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginTop="194dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/hint_firstName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/last_input"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_lastName"
        android:textAlignment="center"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_input"
        />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_email"
        android:textAlignment="center"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_input"
        />


    <EditText
        android:id="@+id/phone_input"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:ellipsize="none"
        android:hint="phone"
        android:inputType="phone"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_edittext"
        android:ellipsize="none"
        android:hint="password"
        android:inputType="textWebPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_input" />

    <EditText
        android:id="@+id/password_confirm_input"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:ellipsize="none"
        android:hint="confirm password"
        android:inputType="textWebPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <Button
        android:id="@+id/sign_up_confirm"
        android:layout_width="318dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorGreenDark"
        android:text="Sign Up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm_input" />



    </androidx.constraintlayout.widget.ConstraintLayout>
