<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="hostFragment"
            type="club.gardentotable.meals.SlotFragment" />
    </data>
    <FrameLayout
        android:id="@+id/fragmentContainerView"
        android:name="club.gardentotable.meals.ui.SlotDetailDialogFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_photo"
        style="@style/user"
        android:layout_width="@dimen/task_bg_size"
        android:layout_height="@dimen/task_bg_size"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginEnd="@dimen/small_padding"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_circle"
        app:layout_constraintBottom_toTopOf="@id/job_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/job_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="145dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/small_padding"
        app:layout_constraintBottom_toTopOf="@+id/job_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo" />

    <TextView
        android:id="@+id/job_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/small_padding"
        app:layout_constraintBottom_toTopOf="@+id/job_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_photo" />

    <Button
        android:id="@+id/job_cancel_button"
        android:layout_height="40dp"
        android:layout_width="0dp"
        android:theme="@style/AppTheme"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorGreenLight"
        android:text="@string/cancel_job"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/job_transfer_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_photo"  />

    <Button
        android:id="@+id/job_transfer_button"
        android:layout_height="40dp"
        android:layout_width="0dp"
        android:theme="@style/AppTheme"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorGreenLight"
        android:text="@string/transfer_job"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/job_swap_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job_cancel_button" />
    <Button
        android:id="@+id/job_swap_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:theme="@style/AppTheme"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorGreenLight"
        android:text="@string/swap_job"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job_transfer_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>